# circom-intsafe

./: .gitignore  Cargo.toml  readme.md
examples/: mux1.circom  mux4.circom
interval_analysis/: Cargo.toml
interval_analysis/src/: analysis.rs  analysis_representation.rs  domain.rs  lib.rs  semantics.rs
intsafe/: Cargo.toml
intsafe/src/: main.rs
parser/: Cargo.toml
parser/src/: include_logic.rs  lib.rs  syntax_sugar_remover.rs
program_structure/src/abstract_syntax_tree/: ast.rs  ast_shortcuts.rs  statement_builders.rs
program_structure/src/program_library/: error_code.rs  error_definition.rs  program_merger.rs  template_data.rs
program_structure/src/utils/: constants.rs  environment.rs  memory_slice.rs
